--- a/Sunfire/Sunfire.csproj
+++ b/Sunfire/Sunfire.csproj
@@ -8,11 +8,24 @@
     <PublishAot>true</PublishAot>
     <InvariantGlobalization>true</InvariantGlobalization>
     <UseSystemResourceKeys>true</UseSystemResourceKeys>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)'=='Release-Linux'">
+    <InputParserConditionalDefines>MOUSE_SUPPORT</InputParserConditionalDefines>
+    <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)'=='Release-Linux-KeyboardOnly'">
     <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="../SunfireFramework/SunfireFramework.csproj" />
+    <ProjectReference Include="../SunfireInputParser/SunfireInputParser.csproj">
+      <AdditionalProperties>
+        DefineConstants=$(InputParserConditionalDefines)
+      </AdditionalProperties>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
