--- a/Sunfire/Sunfire.csproj
+++ b/Sunfire/Sunfire.csproj
@@ -16,8 +16,8 @@
 
   <ItemGroup>
     <ProjectReference Include="../Sunfire.Logging/Sunfire.Logging.csproj" />
-    <ProjectReference Include="../SunfireFramework/SunfireFramework.csproj" />
-    <ProjectReference Include="../SunfireInputParser/SunfireInputParser.csproj" />
+    <ProjectReference Include="../Sunfire.Tui/Sunfire.Tui.csproj" />
+    <ProjectReference Include="../Sunfire.Input/Sunfire.Input.csproj" />
   </ItemGroup>
 
 </Project>
