Lib Seperation, Self Doc, Prototyping S.Image

--- a/Sunfire/Sunfire.csproj
+++ b/Sunfire/Sunfire.csproj
@@ -15,9 +15,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../Sunfire.Logging/Sunfire.Logging.csproj" />
     <ProjectReference Include="../Sunfire.Tui/Sunfire.Tui.csproj" />
+    <ProjectReference Include="../Sunfire.Views/Sunfire.Views.csproj" />
     <ProjectReference Include="../Sunfire.Input/Sunfire.Input.csproj" />
+    <ProjectReference Include="../Sunfire.Logging/Sunfire.Logging.csproj" />
   </ItemGroup>
 
 </Project>
