Minor refactor of gemini code

--- a/Sunfire/Sunfire.csproj
+++ b/Sunfire/Sunfire.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="../Sunfire.Views/Sunfire.Views.csproj" />
     <ProjectReference Include="../Sunfire.Input/Sunfire.Input.csproj" />
     <ProjectReference Include="../Sunfire.Logging/Sunfire.Logging.csproj" />
+    <ProjectReference Include="../Sunfire.FSUtils/Sunfire.FSUtils.csproj" />
   </ItemGroup>
 
 </Project>
