--- a/Sunfire.FSUtils/Sunfire.FSUtils.csproj
+++ b/Sunfire.FSUtils/Sunfire.FSUtils.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Mono.Posix.NETStandard" Version="1.0.0" />
+    <ProjectReference Include="../Sunfire.Logging/Sunfire.Logging.csproj" />
   </ItemGroup>
 
 </Project>
