--- a/Sunfire.Tui/Sunfire.Tui.csproj
+++ b/Sunfire.Tui/Sunfire.Tui.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="../Sunfire.Logging/Sunfire.Logging.csproj" />
     <ProjectReference Include="../Sunfire.Ansi/Sunfire.Ansi.csproj" />
+    <ProjectReference Include="../Sunfire.Common/Sunfire.Common.csproj" />
   </ItemGroup>
 
 </Project>
