--- a/Sunfire/Sunfire.csproj
+++ b/Sunfire/Sunfire.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="../Sunfire.Input/Sunfire.Input.csproj" />
     <ProjectReference Include="../Sunfire.Logging/Sunfire.Logging.csproj" />
     <ProjectReference Include="../Sunfire.FSUtils/Sunfire.FSUtils.csproj" />
+    <ProjectReference Include="../Sunfire.Common/Sunfire.Common.csproj" />
   </ItemGroup>
 
 </Project>
