--- a/Sunfire.FSUtils/Sunfire.FSUtils.csproj
+++ b/Sunfire.FSUtils/Sunfire.FSUtils.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../Sunfire.Logging/Sunfire.Logging.csproj" />
+  </ItemGroup>
+
 </Project>
