--- a/Sunfire/Sunfire.csproj
+++ b/Sunfire/Sunfire.csproj
@@ -18,4 +18,11 @@
     <ProjectReference Include="../Sunfire.FSUtils/Sunfire.FSUtils.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="Scripts\**\*">
+      <Link>%(RecursiveDir)%(Filename)%(Extension)</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
